:bento: Fix contrast on homepage blocks w/ background image

--- a/src/langerak_gkv/sass/components/_homepage.scss
+++ b/src/langerak_gkv/sass/components/_homepage.scss
@@ -31,7 +31,7 @@ $homepage-row-padding: 30px;
       padding-left: $page-content-padding + $homepage-row-padding;
       padding-right: $page-content-padding + $homepage-row-padding;
 
-      background-image: url('../img/strepen.png');
+      background-image: url('../img/strepen-donker.png');
       background-size: 100% 100%;
       background-repeat: no-repeat;
 
